fix carousel image clipping when sliding and adjust parallax

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ p {
 }
 
 .testimonial-image {
+  width: 100%;
   max-width: 30rem;
 }
 
@@ -155,7 +156,7 @@ p {
   color: #81d742;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
 .parallax {
   visibility: hidden;
 }
